# ida-chat-cpp

./: .gitignore  CMakeLists.txt  README.md
include/ida_chat/api/: claude_client.hpp  claude_types.hpp  cli_transport.hpp  http_client.hpp  keychain.hpp  streaming_parser.hpp
include/ida_chat/common/: ida_begin.hpp  ida_compat.hpp  ida_end.hpp  json.hpp  platform.hpp  qt_first.hpp  qt_fwd.hpp  warn_off.hpp  warn_on.hpp
include/ida_chat/core/: chat_callback.hpp  chat_core.hpp  fwd.hpp  script_executor.hpp  types.hpp
include/ida_chat/history/: message_history.hpp  session_manager.hpp
include/ida_chat/plugin/: action_handlers.hpp  plugin.hpp  settings.hpp
include/ida_chat/ui/: agent_signals.hpp  agent_worker.hpp  chat_history_widget.hpp  chat_input_widget.hpp  chat_message.hpp  collapsible_section.hpp  cursor_chat_view.hpp  cursor_input.hpp  cursor_theme.hpp  ida_chat_form.hpp  markdown_renderer.hpp  onboarding_panel.hpp  progress_timeline.hpp  task_sidebar.hpp
src/api/: claude_client.cpp  claude_types.cpp  cli_transport.cpp  http_client.cpp  keychain.cpp  streaming_parser.cpp
src/common/: qt_compat.cpp
src/core/: chat_callback.cpp  chat_core.cpp  script_executor.cpp  types.cpp
src/history/: message_history.cpp  session_manager.cpp
src/plugin/: action_handlers.cpp  plugin.cpp  settings.cpp
src/ui/: agent_worker.cpp  chat_history_widget.cpp  chat_input_widget.cpp  chat_message.cpp  collapsible_section.cpp  cursor_chat_view.cpp  cursor_input.cpp  ida_chat_form.cpp  markdown_renderer.cpp  onboarding_panel.cpp  progress_timeline.cpp  task_sidebar.cpp
